--- a/package.json
+++ b/package.json
@@ -14,24 +14,29 @@
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "~44.0.0",
-    "expo-camera": "~12.1.2",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-pager-view": "5.4.9",
+    "dotenv": "^16.0.1",
+    "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-firebase-recaptcha": "~2.2.0",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.2",
+    "firebase": "9.6.11",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "^0.68.2",
+    "react-native-gifted-chat": "^1.0.0",
+    "react-native-pager-view": "5.4.15",
     "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.67.6",
     "typescript": "~4.3.5"
   },
   "private": true
